# robot-prediction

./: .gitignore  .vision1.sh.swp  control.sh  infrared_detection.sh  odom.sh  predicted.sh  realsense.sh  team_info.txt  vision1.sh  vision2.sh
src/imu_filter_madgwick/cfg/: ImuFilterMadgwick.cfg
src/imu_filter_madgwick/src/: imu_filter_ros.cpp
src/realsense2_camera/cfg/: rs435_params.cfg
src/realsense2_camera/launch/: rs_rgbd.launch
src/robo_control/: CMakeLists.txt  package.xml
src/robo_control/include/robo_control/: robo_control.hpp  serial.h
src/robo_control/launch/: laser_filter_parm.yaml  robo1_session1.launch  robo1_session2.launch  robo1_strategy1.launch  robo1_strategy2.launch  robo1_strategy3.launch  robo1_strategy4.launch  robo2_session1.launch  robo2_session2.launch  robo2_strategy2.launch  robo2_strategy3.launch  robo2_strategy4.launch  robo_control.launch  robo_exchange1.launch  robo_exchange2.launch  robo_nav.launch  tf.launch
src/robo_control/msg/: GameInfo.msg  TeamInfo.msg
src/robo_control/script/: navigation.py  pos_send.py
src/robo_control/scripts/: nav.py  navigation.py  plot.py  plot_scatter.py  pos_recv.py  pos_send.py  ukf.txt
src/robo_control/src/: MainControl.cpp  MainControlStrategy1.cpp  MainControlStrategy2.cpp  MainControlStrategy3.cpp  MainControlStrategy4.cpp  MainControlStrategy5.cpp  NCEC.cpp  control_1_session.cpp  control_2_session.cpp  enemy_listen.cpp  enemy_listen_pnp.cpp  navigation_test.cpp  odom_broadcaster.cpp  robo_control.cpp  serial.cpp
src/robo_navigation/: CMakeLists.txt  package.xml
src/robo_navigation/include/robo_navigation/: PID.h  global_planner.hpp
src/robo_navigation/launch/: robo_nav_lidar.launch  robo_navigation.launch
src/robo_navigation/script/: 2draw.py  draw_map.py  draw_map37.py  matrix.xml  scandata.py
src/robo_navigation/src/: global_planner.cpp  nav_testt.cpp  robo_navigation_1.cpp  robo_navigation_node.cpp  scan_filter.cpp
src/robo_odom/launch/: robo_odom_robot1.launch  robo_odom_robot2.launch
src/robo_odom/scripts/: tf_bro.py  ukf_process_node.py  ukf_process_node_video.py  ukf_yaw_node.py
src/robo_perception/msg/: Object.msg  ObjectList.msg
src/robo_perception/scripts/: .gitignore  .ukf_predict_node.py.kate-swp  download_infrared_weights.sh  download_rgb_weights.sh  infrared_detection.py  infrared_detection_V1.1.0.py  infrared_rec.py  pixel_color.py  rgb_detection.py  testlpf.py  ukf_predict_node.9x9.py  ukf_predict_node.leave_pnp.py  ukf_predict_node.py  ukf_predict_node.v1,py  ukf_predict_node_demo.py
src/robo_perception/scripts/config/: config  config.py  kitti_squeezeDet_config.py
src/robo_vision/: CMakeLists.txt  package.xml
src/robo_vision/include/robo_vision/: AngleSolver.hpp  ArmorDetector.hpp  ImageConsProd.hpp  Predictor.hpp  RMVideoCapture.hpp  Settings.hpp
src/robo_vision/launch/: robo_vision1.launch  robo_vision2.launch
src/robo_vision/msg/: Armor.msg  ArmorInfo.msg  FishCamInfo.msg
src/robo_vision/src/: AngleSolver.cpp  ArmorDetector.cpp  FishCam_node.cpp  ImageConsProd.cpp  Predictor.cpp  ReadCamera.cpp  RuneResFilter.cpp  robo_vision_node.cpp  robo_vision_node1.cpp  test_cam.cpp  vision_node.cpp
